src/RubySharp/Core/RubyDLL.MRuby.cs

#if MRUBY
#define MRB_INT32
#define MRB_USE_FLOAT32
using System;
using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;

#if MRB_INT32
using mrb_int = System.Int32;
#elif MRB_INT64
using mrb_int = System.Int64;
#endif
#if MRB_USE_FLOAT32
using mrb_float = System.Single;
#else
using mrb_float = System.Double;
#endif
using mrb_sym = System.UInt32;
using mrb_bool = System.Boolean;


namespace RubySharp {
	
	public static unsafe partial class RubyDLL {
		
		/// <summary>
		/// DLL ファイルのパスです。
		/// </summary>
		private const string __DllName = "mruby";


		// static RubyDLL() {
		// 	Console.WriteLine ( "static init." );
		// }
		
		
		/// <summary>
		/// 从mruby中调用C#方法委托
		/// mrb_func_t
		/// </summary>
		[UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		public delegate R_VAL RubyCSFunction( IntPtr state, R_VAL self );

		/// <summary>
		/// data type release function pointer
		/// </summary>
		[UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		public delegate R_VAL RubyDFreeFunction( IntPtr state, IntPtr data );

		
		[UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		public delegate R_VAL RubyAllocFunction( mrb_state* mrb, IntPtr ptr, ulong size, IntPtr ud );

		
		/// <summary>
		/// Custom data type description.
		/// </summary>
		[StructLayout( LayoutKind.Sequential )]
		public struct mrb_data_type {
			public string struct_name;
			public RubyDFreeFunction dfree;
		}
		
		
		//
        // ruby_*
        //
        /// <summary>
        /// 初始化mruby虚拟机
        /// </summary>
        /// <returns>pointer</returns>
		[DllImport(__DllName, EntryPoint = "mrb_open", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_state* mrb_open();
		
		
		[DllImport(__DllName, EntryPoint = "mrb_open_allocf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_state* mrb_open_allocf( RubyAllocFunction f, IntPtr ud );
		
		
		[DllImport(__DllName, EntryPoint = "mrb_open_core", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_state* mrb_open_core( RubyAllocFunction f, IntPtr ud );
		
		
        /// <summary>
        /// 关闭并释放mruby虚拟机
        /// </summary>
        /// <param name="mrb_state"></param>
		[DllImport(__DllName, EntryPoint = "mrb_close", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern void mrb_close( IntPtr mrb );

		//
		// rb_eval*
		// mruby 运行函数
		// 
		[DllImport(__DllName, EntryPoint = "mrb_load_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_load_string( IntPtr mrb, byte[] s );
		
		
		// [UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		// public delegate R_VAL d_mrb_load_nstring( IntPtr mrb_state, byte[] script_string, long len );
		// public static d_mrb_load_nstring mrb_load_nstring { get; } = FuncLoader.LoadFunction< d_mrb_load_nstring >( RubyLibrary, "mrb_load_nstring" );

		
		[DllImport(__DllName, EntryPoint = "mrb_load_string_cxt", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_load_string_cxt( IntPtr mrb, byte[] s, IntPtr cxt );
		
		
		[DllImport(__DllName, EntryPoint = "mrb_load_file", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_load_file( IntPtr mrb, IntPtr f );
		
		
		[DllImport(__DllName, EntryPoint = "mrb_load_file_cxt", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_load_file_cxt( IntPtr mrb, IntPtr f, IntPtr c );
		
		
		/// <summary>
		/// 加载mrbc字节码
		/// </summary>
		/// <param name="mrb"></param>
		/// <param name="bin"></param>
		/// <returns></returns>
		[DllImport(__DllName, EntryPoint = "mrb_load_irep", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_load_irep( IntPtr mrb, byte[] bin );


		//
		// 数値
		// (int が 32 bit でないと不具合が生じうる)
		//
		//public const int MRB_FIXNUM_FLAG = 0x01;
		//public const int FIXNUM_MAX = int.MaxValue >> 1;
		//public const int FIXNUM_MIN = int.MinValue >> 1;
		//public static bool FIXNUM_P(mrb_int val)
		//{
		//    return (val & MRB_FIXNUM_FLAG) != 0;
		//}

		// [UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		// public delegate R_VAL d_mrb_to_int( IntPtr mrb_state, R_VAL v );
		//
		// [UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		// public delegate R_VAL d_mrb_to_str( IntPtr mrb_state, R_VAL v );
		//
		// [UnmanagedFunctionPointer( CallingConvention.Cdecl )]
		// public delegate R_VAL d_mrb_any_to_s( IntPtr mrb_state, R_VAL obj );
		//
		// public static d_mrb_to_int mrb_to_int { get; } = FuncLoader.LoadFunction< d_mrb_to_int >( RubyLibrary, "mrb_to_int" );
		//
		// public static d_mrb_to_str mrb_to_str { get; } = FuncLoader.LoadFunction< d_mrb_to_str >( RubyLibrary, "mrb_to_str" );
		//
		// public static d_mrb_any_to_s mrb_any_to_s { get; } = FuncLoader.LoadFunction< d_mrb_any_to_s >( RubyLibrary, "mrb_any_to_s" );

		
		[DllImport(__DllName, EntryPoint = "mrb_float_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_float_value( IntPtr mrb, mrb_float f );

		
		[DllImport(__DllName, EntryPoint = "mrb_fixnum_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_fixnum_value( IntPtr mrb, mrb_int i );

		
		[DllImport(__DllName, EntryPoint = "mrb_bool_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_bool_value( IntPtr mrb, mrb_bool b );

		
		[DllImport(__DllName, EntryPoint = "mrb_nil_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_nil_value();

		
		[DllImport(__DllName, EntryPoint = "mrb_undef_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_undef_value();

		
		[DllImport(__DllName, EntryPoint = "mrb_false_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_false_value();

		
		[DllImport(__DllName, EntryPoint = "mrb_true_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_true_value();

		
		[DllImport(__DllName, EntryPoint = "mrb_cptr_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_cptr_value( IntPtr mrb, IntPtr p );

		
		[DllImport(__DllName, EntryPoint = "mrb_obj_value_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern R_VAL mrb_obj_value( IntPtr p );

		
		[DllImport(__DllName, EntryPoint = "mrb_ptr_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern IntPtr mrb_ptr( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_cptr_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern IntPtr mrb_cptr( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_float_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_float mrb_float( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_fixnum_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_int mrb_fixnum( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_symbol_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_sym mrb_symbol( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_type_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern rb_vtype r_type( R_VAL o );
		
		
		[DllImport(__DllName, EntryPoint = "mrb_immediate_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_immediate_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_fixnum_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_fixnum_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_symbol_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_symbol_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_undef_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_undef_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_nil_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_nil_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_false_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_false_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_true_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_true_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_float_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_float_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_array_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_array_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_string_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_string_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_hash_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_hash_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_cptr_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_cptr_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_exception_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_exception_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_free_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_free_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_object_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_object_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_class_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_class_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_module_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_module_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_iclass_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_iclass_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_sclass_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_sclass_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_proc_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_proc_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_range_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_range_p( R_VAL o );
		
		[DllImport(__DllName, EntryPoint = "mrb_env_p_ex", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
		public static extern mrb_bool mrb_env_p( R_VAL o );
